fix waybar jumping

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -17,9 +17,10 @@ window#waybar {
 }
 
 #window {
-  margin: 8px;
-  padding-left: 8;
-  padding-right: 8;
+  padding-left: 4px;
+  padding-right: 4px;
+  margin-top: -50px;
+  margin-bottom: -50px;
 }
 button {
   box-shadow: inset 0 -3px transparent;
@@ -33,7 +34,7 @@ button:hover {
 }
 
 #workspaces button {
-  padding: 0 4px;
+  padding: 4px;
 }
 
 #workspaces button.focused {
